--- a/test/web/index.html
+++ b/test/web/index.html
@@ -1,7 +1,8 @@
 <HTML>
   <head>
     <script src="/jquery-1.8.2.js"></script>
-    <script src="/_game.io/game.io.client.js"></script>
+    <script src="/_comet.io/comet.io.client.js"></script>
+    <script src="/_game.io/game.io.client.js?4"></script>
     <script src="/main.js"></script>
   </head>
   <BODY>Hello</BODY>
